
* in general, we build kernel modules (e.g. for nftables) at the same
time as the kernel itself instead of expecting to be able to build
them afterwards as though they were "out of tree". Refer to commit
b9c0d93670275e69df24902b05bf4aa4f0fcbe96 for a fuller explanation
of how this simplifies things.

2024-02-13

So that we can be more consistent about services that would like their
state to be preserved across boots (assuming a writable filesystem)
these changes have been made

* /run/service-state has been moved to /run/services/outputs
 to better reflect what it's used for
* /run/services/state is either a symlink to /persist/services/state
 (if there's a writeable fs on /persist) or a directory (if there
 isn't)

The change will lose your ssh host key(s) unless you copy them from
the old location to the new one before rebooting into the new system

   mkdir -m 02751 -p /run/services/state/dropbear
   cp /persist/secrets/dropbear/* /run/services/state/dropbear

The `output`, `mkoutputs` functions defined by ${serviceFns}
have been updated for the new location.

2024-02-16

New (or at least, previously unreported) port! Liminix now runs on the
Turris Omnia and has been serving my family's internet needs for most
of this week.  Thanks to NGI0 Entrust and the NLnet Foundation for
sponsoring this development (and funding the hardware)

2024-02-21

New port! Thanks to Raito Bezarius, Liminix now runs on the Zyxel NWA50AX,
an MT7621 (MIPS EL) dual radio WiFi AP.

2024-04-29

The setup for using `levitate` has changed: now it accepts an entire
config fragment, not just a list of services.  Hopefully this makes it
a bit more useful :-)

  defaultProfile.packages = with pkgs; [
    ... 
    (levitate.override {
      config  = {
        services = {
          inherit (config.services) dhcpc sshd watchdog;
        };
        defaultProfile.packages = [ mtdutils ];
        users.root.openssh.authorizedKeys.keys = secrets.root.keys;
      };
    })
  ];